Deployment/Infrastructure/Namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: weatherstation
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: mqtt
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: honeypal
  labels:
    istio-injection: enabled
