Deployment/Infrastructure/VirtualServices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
    - "kiali.wondering-developer.de"
  gateways:
    - default/ingress-gateway
  http:
    - headers:
        request:
          set:
            X-Forwarded-Port: "443"
      route:  # This line should be at the same indentation level as "headers"
        - destination:
            host: kiali
            port:
              number: 20001
      timeout: 30s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
  - "grafana.wondering-developer.de"
  gateways:
  - default/ingress-gateway
  http:
  - route:
    - destination:
        host: grafana
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: longhorn-virtualservice
spec:
  hosts:
  - "longhorn.wondering-developer.de"
  gateways:
  - default/ingress-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: longhorn-frontend.longhorn-system.svc.cluster.local 
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: istio-system
spec:
  hosts:
  - "prometheus.wondering-developer.de"
  gateways:
  - default/ingress-gateway
  http:
  - route:
    - destination:
        host: prometheus
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-vs
  namespace: istio-system
spec:
  hosts:
  - "tracing.wondering-developer.de"
  gateways:
  - default/ingress-gateway
  http:
  - route:
    - destination:
        host: tracing
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mqtt-vs
  namespace: honeypal
spec:
  hosts:
  - "mqtt.wondering-developer.de"
  gateways:
  - default/ingress-gateway
  tcp:
  - match:
    - port: 1883
    route:
    - destination:
        host: mosquitto
        port:
          number: 1883
